chore: update faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -4,7 +4,7 @@
 
 ### What is a contest?
 
-A contest is just a way for people to submit entries and people to vote on their favorites. Every contest includes two periods: a submission period and a voting period. The participants in each might be totally different, exactly the same, or subsets of each other—you have complete control to decide who can submit and who can vote. (You can let anyone submit, but you’ll need to define voters to avoid bots affecting the results.)
+A contest is just a way for people to submit entries and people to vote on their favorites. Every contest includes two periods: a submission period and a voting period. The participants in each might be totally different, exactly the same, or subsets of each other—you have complete control to decide who can submit and who can vote. You can define the addresses that can submit or vote—or let anyone submit or vote (in the latter case, they'll just need to pay per vote to avoid botting).
 
 After you create a contest, you can add and fund an optional rewards pool too. The rewards pool is set up proportionately—for example, you might offer 60% of rewards to 1st place, 30% to 2nd, 10% to 3rd—and anyone can execute the transaction to send any rewards in the pool to the winners after the contest is over.
 
@@ -188,7 +188,7 @@ But it’s not the only option. If you want to allowlist based on other criteria
 
 ### How many addresses can I allowlist?
 
-Up to 100,000 addresses can be allowlisted for both submission and voting. You can also let anyone submit entries to your contest if you like.
+Up to 100,000 addresses can be allowlisted for both submission and voting. You can also let anyone submit entries to your contest or vote on entries in your contest if you like.
 
 ### Can you allowlist with ENS?
 
