chore: add faq about downvoting

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -41,7 +41,13 @@ Copy the url of the contest. The last string of letters and numbers is the contr
 Contests can’t be deleted.
 
 However, the contest creator can set the contest to unlisted and remove it from the rewards pool. To set it to unlisted, go to your user profile, and tap the “eye” icon. Unlisted contests can still be found at the same url and on the profile of the contest creator (as well as on the blockchain itself), but otherwise will be unlisted on the site.
- 
+
+### How does downvoting work?
+
+If you enable downvoting, a downvote will operate the same way as a normal upvote in terms of fees. That is, if you set the contest for people to pay per vote, they'd pay for a downvote just as they would for an upvote.
+
+Due to smart contract limitations, you can't add a rewards pool to a contest that has downvoting enabled. So if you want to reward winners with our rewards pool, you should *not* turn on downvoting.
+
 ### Can I verify this contract?
 
 Yes! See [Verifying Contracts](/technical-how-tos/verifying-contracts).
