chore: make getting started index

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,14 +1,7 @@
----
-layout: landing
----
+# Get started
 
-import { HomePage } from 'vocs/components'
+Make a contest! You can do it in 3 minutes at [jokerace.io](https://www.jokerace.io/) on any EVM chain that you want!
 
-<HomePage.Root>
-  <HomePage.Logo />
-  <HomePage.Tagline>The What, Where, How, and Why of everything JokeRace</HomePage.Tagline>
-  <HomePage.Buttons>
-    <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
-    <HomePage.Button href="https://github.com/jk-labs-inc/jokerace">GitHub</HomePage.Button>
-  </HomePage.Buttons>
-</HomePage.Root>
+We support 45+ chains at this point, and if we don't have one you want please feel free to make a chain request [here](https://github.com/jk-labs-inc/jokerace/issues/new?assignees=&labels=chain&projects=&template=chain_request.md&title=chain%3A+) and we can get integrated!
+
+Check out the 90+ chains and counting we already support [here](https://docs.jokerace.io/faq#which-chains-is-jokerace-live-on)!
