--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -356,6 +356,11 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 
 Yes. If you want to reward ERC-20s from another chain, please bridge them over to the same chain as the contest first, and then use them to fund the pool. If you want to reward NFTs, you can do so manually by sending them directly to the winners. 
 
+## Circuits
+Circuits are a mechanism for contest creators to direct earnings to independent smart contracts that perform onchain transactions. That means that whenever a player in a contest submits, votes, or performs any kind of action generating earnings, they can simultaneously perform any onchain action, such as buying tokens, minting collectibles, providing liquidity, or earning credentials—all as part of playing in a contest.
+
+Check out the [technical documentation page](/technical-how-tos/circuits) for more in-depth information.
+
 ## Use Cases
 
 ### How can I use JokeRace for points and reputation?
