--- a/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
+++ b/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
@@ -7,8 +7,8 @@ All [JokeRace contracts](https://github.com/jk-labs-inc/jokerace/tree/staging/pa
 The ABIs and flattend Solidity files for all of the different versions are [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
 
 ## Templates
-[Social Graph Ventures](https://x.com/socialgraphvc?s=21) made [this](https://dune.com/socialgraphvc/jokerace) live-updating Dune dashboard of all contests on Zora, Base, Optimism, Arbitrum, and Polygon with various high-level metrics for them!
+- [Social Graph Ventures](https://x.com/socialgraphvc?s=21) made [this](https://dune.com/socialgraphvc/jokerace) live-updating Dune dashboard of all contests on Zora, Base, Optimism, Arbitrum, and Polygon with various high-level metrics for them! A very helpful template to start from for querying contest data across multiple chains!
 
-[This dashboard](https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/2023-11-22-10-10-pm-UIs4gX) and the queries in it are helpful as a template for getting started querying JokeRace data!
+- [This dashboard](https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/2023-11-22-10-10-pm-UIs4gX) and the queries in it are helpful as a template for getting started querying JokeRace data!
 
-Also [Andrew Hong](https://twitter.com/andrewhong5297) has made some amazing analysis for his community, [Crypto Data Bytes](https://twitter.com/cryptodatabytes), [here](https://dune.com/cryptodatabytes) that might also be helpful!
+- [Andrew Hong](https://twitter.com/andrewhong5297) has made some amazing analysis for his community, [Crypto Data Bytes](https://twitter.com/cryptodatabytes), [here](https://dune.com/cryptodatabytes) that might also be helpful!
