chore: link Hats extension

--- a/docs/pages/technical-how-tos/building-an-extension.mdx
+++ b/docs/pages/technical-how-tos/building-an-extension.mdx
@@ -25,7 +25,7 @@ Not all extensions should look the same, however. We want JokeRace to be able to
 
 Current extensions include:
 
-- Assigning roles and powers to winners of contests with Hats Protocol
+- Assigning roles and powers to winners of contests with [Hats Protocol](https://github.com/Hats-Protocol/jokerace-eligibility/blob/main/src/JokeraceEligibility.sol)
 - Generating insights about players based on their onchain histories with Bello
 - Rewarding winners NFTs with Coinvise
 - Allocating points to players with Stack
