chore: add pages to index

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -5,3 +5,14 @@ Make a contest! You can do it in 3 minutes at [jokerace.io](https://www.jokerace
 We support 45+ chains at this point, and if we don't have one you want please feel free to make a chain request [here](https://github.com/jk-labs-inc/jokerace/issues/new?assignees=&labels=chain&projects=&template=chain_request.md&title=chain%3A+) and we can get integrated!
 
 Check out the 90+ chains and counting we already support [here](https://docs.jokerace.io/faq#which-chains-is-jokerace-live-on)!
+
+## Pages
+
+- [Frequently Asked Questions](/faq)
+
+### Technical How Tos
+
+- [Building an Extension](/technical-how-tos/building-an-extension)
+- [Verifying Contracts](/technical-how-tos/verifying-contracts)
+- [JokeRace Onchain Data](/technical-how-tos/jokerace-onchain-data)
+- [Circuits](/technical-how-tos/circuits)
