fixing broken pathway
fixing broken pathway

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -50,7 +50,7 @@ Due to smart contract limitations, you can't add a rewards pool to a contest tha
 
 ### Can I verify this contract?
 
-Yes! See [Verifying Contracts](/technical-how-tos/verifying-contracts).
+Yes! See [Verifying Contracts](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/technical-how-tos/verifying-contracts.mdx#L4).
 
 ### If I delete a submission, how does that affect who can submit?
 
