fixing broken pathways
fixing broken pathways

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -8,11 +8,11 @@ Check out the 90+ chains and counting we already support [here](https://docs.jok
 
 ## Pages
 
-- [Frequently Asked Questions](/faq)
+- [Frequently Asked Questions](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/faq.mdx)
 
 ### Technical How Tos
 
-- [Building an Extension](/technical-how-tos/building-an-extension)
-- [Verifying Contracts](/technical-how-tos/verifying-contracts)
-- [JokeRace Onchain Data](/technical-how-tos/jokerace-onchain-data)
-- [Circuits](/technical-how-tos/circuits)
+- [Building an Extension](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/technical-how-tos/building-an-extension.mdx)
+- [Verifying Contracts](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/technical-how-tos/verifying-contracts.mdx#L4)
+- [JokeRace Onchain Data](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/technical-how-tos/jokerace-onchain-data.mdx)
+- [Circuits](https://github.com/jk-labs-inc/jokerace-docs/blob/cd0272904c1ff391bce7fa42b42125147580b617/docs/pages/technical-how-tos/circuits.mdx)
