chore: fix typo faq.mdx
Hello, I found some typos. In particular, faracaster should be replaced jokerace in context, right?

"programatically" -> "programmatically", "monetize from creating" -> "monetize by creating", "Farcaster" -> "JokeRace"

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -14,7 +14,7 @@ Popular contest use cases include grants, hackathons, governance, bounties, idea
 
 Onchain contests give you five benefits you couldn’t get offchain.
 
-1. Monetization. Monetizable contests are only possible by building onchain. There is no way to programatically offer rewards to winners offchain. And just as importantly, there is no way to monetize contests directly offchain either—whereas onchain, we can split all commissions with you 50/50 so that everyone can earn. And that’s with 0 credit card or appstore fees that you’d incur offchain. All of this means we are the only way for projects to build a viable business through contests.
+1. Monetization. Monetizable contests are only possible by building onchain. There is no way to programmatically offer rewards to winners offchain. And just as importantly, there is no way to monetize contests directly offchain either—whereas onchain, we can split all commissions with you 50/50 so that everyone can earn. And that’s with 0 credit card or appstore fees that you’d incur offchain. All of this means we are the only way for projects to build a viable business through contests.
 
 2. Reputation. Every vote in an onchain contest is an attestation that a submission was valuable. If Vitalik votes for you in an onchain hackathon, you have a permanent portable attestation that can get you access to communities, airdrops, and job opportunities... even if you lose the hackathon. This is why reputation is crucial as a user incentive: by participating in your contest, players earn powerful onchain reputation they can leverage for years to come. But reputation is also important for you as a contest creator: now you can easily track your most valuable users in case you ever want to offer them airdrops, access, or power within citizens councils in your own community.
 
@@ -224,7 +224,7 @@ However, the presets just help you save time, and you can always manually allowl
 
 ## Monetization
 
-### How can I monetize from creating contests?
+### How can I monetize by creating contests?
 
 On the final page of creating a contest, you can set monetization options to charge players for submitting and voting. JokeRace splits these fees with you 50/50, and you can set these as high as you like. (Please note this is only available on major chains and includes a minimum price to set). At the lowest end, a charge helps maintain high-quality submissions and deters bots; it’s comparable to standard fees in many grant processes or festivals. At the higher end, you can charge users higher amounts if the incentives are great enough (see below).
 
@@ -255,7 +255,7 @@ There are endless ways to monetize contests, some natively on JokeRace’s site,
 
 ### Which chains are frames currently supported on?
 
-Farcaster currently supports frames on these chains:
+JokeRace currently supports frames on these chains:
 - Ethereum mainnet
 - Base
 - Optimism
