chore: add self-funding faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -429,3 +429,21 @@ Rewards for winners onchain
 Monetization (you can set submission fees that we split with you 50/50)
 
 If you do choose to submit directly, you’ll need to cover the submission fees for the contest yourself and will lose the advantages above.
+
+### How can a contest fund itself?
+
+After you create a contest, you can create a rewards pool as well on the contest’s rewards page. When you create the rewards pool, just turn on the toggle on the final screen to send all earnings to the rewards pool.
+
+How does this work? Well, JokeRace split all fees from users with contest creators. So when you turn on self-funding, instead of collecting your fees, you’re choosing for them to go directly into the rewards pool. That means that 50% of all fees go back into rewards.
+
+This is the magic of programmable money.
+
+### What are the benefits of self-funding?
+
+First, you can enable financial incentives for contests without putting up any money of your own. This can be a powerful tool to incentivize participation.
+
+But second, this creates a flywheel. The more people that participate, the higher the rewards go. And the higher the rewards go, the more incentive there is to participate.
+
+Third, it adds extra incentives for entrants to get as many votes as possible. The more people that vote for them, the more money they stand to earn—and the more likely they are to win. This can create dynamic competitions with players.
+
+Finally, in anyone-can-vote-contests, it can help prevent arbitrage opportunities that accompany traditional rewards. For example, in an externally funded contest, players may be incentivized to buy up votes in order to get the rewards. If the prize pool is $500, for example, they may want to spend hundreds of dollars to try to win in order to earn. This can be a very fun game of its own, but self-funding helps avoid it. Since users only get back 50% of what they put in, they’re much less incentivized to try to arbitrage a prize pool (since even if it’s quite large, that’s likely due to voting on other entries). 
