chore: just link to chains

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -72,105 +72,7 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 
 ### Which chains is JokeRace live on?
 
-:::details[Mainnet]
-- Aevo
-- Ancient 8
-- ArbitrumOne
-- Arthera
-- AstarZkEVM
-- AstriaDusk2
-- AvaxCChain
-- Base
-- Blast
-- BNB
-- Celo
-- Degen
-- EOS
-- Evmos
-- Fantom
-- Fraxtal
-- Fuse
-- Gold
-- Gnosis
-- Holesky
-- InEVM
-- Kroma
-- Linea
-- LootChain
-- Lukso
-- Lyra
-- Mainnet
-- Manta Pacific
-- Mantle
-- Merlin
-- Mode
-- NautilusChain
-- Near
-- Neon
-- Optimism
-- QChain
-- Quartz
-- Ronin
-- Scroll
-- Sei
-- Syndicate Frame
-- Palm
-- Polygon
-- PolygonZk
-- Proteus
-- Unique
-- Vitruveo
-- ZkFair
-- Zora
-:::
-
-:::details[Testnet]
-- Ancient 8
-- Arthera
-- Arbitrum One
-- AstarZkEVM
-- Base
-- Berachain
-- Blast
-- Camp
-- Celo
-- EOS
-- Evmos
-- Fantom
-- Frame
-- Fraxtal
-- Gnosis
-- Holesky
-- InEVM
-- Linea
-- Lit
-- LootChain
-- Lukso
-- Mantle
-- Merlin
-- Mode
-- Morph
-- Near
-- NeonDevnet
-- Optimism
-- Palm
-- Polygon
-- PolygonZk
-- QChain
-- RedstoneHolesky
-- Ronin
-- Scroll
-- ScrollSepolia
-- Sepolia
-- Taiko
-- X1
-- Zeta
-- ZkFair
-:::
-
-And finally:
-
-- Ethereum Mainnet (we do not recommend creating a contest here, as fees for using the chain can often run 100x the costs of other chains)
+You can see the comprehensive list of chains we're live on [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/config/wagmi/custom-chains).
 
 ### How can I tell which contests are legitimate?
 
