--- a/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
+++ b/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
@@ -7,7 +7,7 @@ All [JokeRace contracts](https://github.com/jk-labs-inc/jokerace/tree/staging/pa
 The ABIs and flattend Solidity files for all of the different versions are [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
 
 ## Templates
-- [Social Graph Ventures](https://x.com/socialgraphvc?s=21) made [this](https://dune.com/socialgraphvc/jokerace) live-updating Dune dashboard of all contests on Zora, Base, Optimism, Arbitrum, and Polygon with various high-level metrics for them! A very helpful template to start from for querying contest data across multiple chains!
+- [Social Graph Ventures](https://x.com/socialgraphvc?s=21) made [this overview dashboard](https://dune.com/socialgraphvc/jokerace) of all contests on Zora, Base, Optimism, Arbitrum, and Polygon with various high-level metrics for them, as well as [a parameterizable dashboard for specific contest metrics](https://dune.com/socialgraphvc/jokerace-creator)! These are very helpful templates to start from for querying contest data across multiple chains!
 
 - [This dashboard](https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/2023-11-22-10-10-pm-UIs4gX) and the queries in it are helpful as a template for getting started querying JokeRace data!
 
