--- a/docs/pages/technical-how-tos/circuits.mdx
+++ b/docs/pages/technical-how-tos/circuits.mdx
@@ -1,12 +1,12 @@
 # Circuits
 
-Circuits are a mechanism for contest creators to direct earnings to independent smart contracts that perform onchain transactions. That means that whenever a player in a contest submits, votes, or performs any kind of action generating earnings, they can simultaneously perform any onchain action, such as buying tokens, minting collectibles, providing liquidity, or earning credentials—all as part of playing in a contest.
+Circuits are a mechanism for contest creators to direct earnings to independent smart contracts that perform onchain transactions. That means that whenever a player in a contest enters, votes, or performs any kind of action generating earnings, they can simultaneously perform any onchain action, such as buying tokens, minting collectibles, providing liquidity, or earning credentials—all as part of playing in a contest.
 
 And that, in turn, means that programmatic circuits can be built to supercharge engagement, pump token prices, and onboard players onto new services.
 
 ## Token Buybacks
 
-You can point your contest's creator earnings to a contract that buys back your community's token every time someone submits or votes in your contest.
+You can point your contest's creator earnings to a contract that buys back your community's token every time someone enters or votes in your contest.
 
 ::::steps
 
