chore: make relative link

--- a/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
+++ b/docs/pages/technical-how-tos/jokerace-onchain-data.mdx
@@ -2,7 +2,7 @@
 
 ## Structure
 
-All [JokeRace contracts](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/forge/src) are standardized to version across all chains. To see what version a contract is you just have to call the `version()` function (instructions to do so are [here](https://docs.jokerace.io/technical-how-tos/verifying-contracts#determine-the-contracts-version)), and that contract version is going to be the same on all chains.
+All [JokeRace contracts](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/forge/src) are standardized to version across all chains. To see what version a contract is you just have to call the `version()` function (instructions to do so are [here](/technical-how-tos/verifying-contracts#determine-the-contracts-version)), and that contract version is going to be the same on all chains.
 
 The ABIs and flattend Solidity files for all of the different versions are [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
 
