chore: add team page to home page

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -9,6 +9,7 @@ Check out the 90+ chains and counting we already support [here](https://docs.jok
 ## Pages
 
 - [Frequently Asked Questions](/faq)
+- [Our Team](/our-team)
 
 ### Technical How Tos
 
