chore: ai agents and dashboards

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -337,3 +337,34 @@ But second, this creates a flywheel. The more people that participate, the highe
 Third, it adds extra incentives for entrants to get as many votes as possible. The more people that vote for them, the more money they stand to earn—and the more likely they are to win. This can create dynamic competitions with players.
 
 Finally, in anyone-can-vote-contests, it can help prevent arbitrage opportunities that accompany traditional rewards. For example, in an externally funded contest, players may be incentivized to buy up votes in order to get the rewards. If the prize pool is $500, for example, they may want to spend hundreds of dollars to try to win in order to earn. This can be a very fun game of its own, but self-funding helps avoid it. Since users only get back 50% of what they put in, they’re much less incentivized to try to arbitrage a prize pool (since even if it’s quite large, that’s likely due to voting on other entries). 
+
+## AI Agents
+
+### Is there a way to get AI agents to play in contests?
+
+[James Young](https://x.com/jamesyoung) has devised a framework to create AI agents that can interact on JokeRace. You can check it out [here](https://github.com/collabland/AI-Agent-Starter-Kit/blob/b235d05ee05e4386ed433dae2e1bec85156507cc/.env.example#L12).
+
+## Dashboards
+
+### How do I access my contest dashboard?
+
+1. Navigate to your contest page
+2. Click the "Extensions" tab
+3. Select "See Analytics"
+4. Click "Run" to load the latest data
+
+Notes:
+- Be patient - initial data loading can take several minutes
+- Click "Run" anytime you want to refresh the data
+- Not all contests have dashboards available - if the chain that a contest is on is not supported by [Dune](https://dune.com/) then it will not have a dashboard
+
+### What data can I see?
+
+The dashboard shows:
+- Total revenue
+- Number of entries and entry submitters
+- Number of votes and unique voters
+- Entry IDs and voter addresses
+- Proposer addresses
+- Detailed voting patterns
+
